@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-06-04T16:10:38Z",
+  "timestamp" : "2022-06-05T00:53:05Z",
   "count_outdated" : 390,
   "uniques_outdated" : 19,
-  "count" : 406,
+  "count" : 407,
   "uniques" : 24,
   "views" : [
     {
@@ -35,8 +35,8 @@
     },
     {
       "timestamp": "2022-06-04T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 2 ],
+      "count": 3,
+      "count_minmax": [ 2, 3 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
