@@ -1,5 +1,5 @@
 {
-  "count": 16,
+  "count": 17,
   "uniques": 1,
   "views": [
     {
@@ -24,7 +24,7 @@
     },
     {
       "timestamp": "2022-06-04T00:00:00Z",
-      "count": 2,
+      "count": 3,
       "uniques": 1
     }
   ]
