@@ -1,3 +1,10 @@
+2022-06-05T00:53:05Z:
+* notice: last 14d: unq all: 1 17
+* notice: prev accum: outdated-unq outdated-all / unq all: 19 390 / 24 406
+* notice: next accum: outdated-unq outdated-all / unq all: 19 390 / 24 407
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +3 -0 -0 / 1 3
+* notice: removed / changed dates: [] / [2022-06-04]
+
 2022-06-04T16:10:38Z:
 * notice: last 14d: unq all: 1 16
 * notice: prev accum: outdated-unq outdated-all / unq all: 18 389 / 24 406
